[SLICE-V1-001] Rework frozen findings and accepted PG17 bootstrap